<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- version infomation -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/current_version" />

        <TextView
            android:id="@+id/currentVersionInfo"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/latest_version" />

        <TextView
            android:id="@+id/latestVersionInfo"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>
    
    <!-- first, check whether this device need to update -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/firstly" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/check_update" />
    </LinearLayout>

    <!-- second, download the file of update, if it need to update -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/secondly" />

        <Button
            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/download" />
    </LinearLayout>
    <!-- thirdly, reboot to run update -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/thirdly" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/run_update" />
    </LinearLayout>

    <!-- Notices ; read me -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/read_me" />
    </LinearLayout>

</LinearLayout>